Support the 'in' comparator. Limit some parts to 80 character width (the quoted parts :). Some comments intention meaning isn't obvious. Fix duplicate id attribute. Call wrappers 'wrapper' and not 'container' Make highlighted syntax errors more readable with white text

--- a/visual/trunk/css/lagcolors.css
+++ b/visual/trunk/css/lagcolors.css
@@ -86,5 +86,6 @@ span.lag-comparator {
 	color: black;
 }
 span.lag-syntax-error {
-	background-color: red;
+	background-color:   red;
+    color:              white;
 }
